# GameboyEmulator

./: .build.yml  .builds.yml  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: lint.yaml  run.yaml
backend/: Cargo.toml
backend/src/: display.rs  interrupt.rs  lib.rs  utils.rs
backend/src/cpu/: decode.rs  instruction.rs  micro_op.rs  mod.rs  register.rs
backend/src/mbc/: mbc1.rs  mod.rs  simple.rs
backend/src/memory/: dma.rs  mbc1.rs  mod.rs
backend/src/ppu/: fetcher.rs  oam.rs  pixel.rs  pixel_fifo.rs
backend/test_roms/acid2/: README.md
backend/test_roms/blargg/: README.md
backend/tests/: blargg_tests.rs  common.rs
frontend/: Cargo.toml
frontend/src/: emu_thread.rs  main.rs
src/: display.rs  driver.rs  emu_thread.rs  interrupt.rs  lib.rs  main.rs  serial.rs
src/cpu/: decode.rs  instruction.rs  micro_op.rs  mod.rs  register.rs
src/memory/: mbc1.rs  mod.rs  simple.rs
src/ppu/: fetcher.rs  mod.rs  oam.rs  pixel.rs  pixel_fifo.rs
tests/: acid2_test.rs  blargg_tests.rs  common.rs
