[package]
name = "gameboy_emulator"
version = "0.1.0"
authors = ["Paul Cacheux <paulcacheux@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 2

[lib]
name = "gbemu"
path = "src/lib.rs"

[[bin]]
name = "gameboy_emulator"
path = "src/driver.rs"

[dependencies]
log = "0.4.11"
bitflags = "1.2.1"
env_logger = "0.8.2"
winit = "0.24.0"
pixels = "0.2.0"
clap = "2.33.3"

[dev-dependencies]
image = "0.23.12"