[package]
name = "gameboy_emulator"
version = "0.1.0"
authors = ["Paul Cacheux <paulcacheux@gmail.com>"]
edition = "2021"

[dependencies]
gbemu = { path = "../backend" }
log = "0.4.22"
env_logger = "0.10.2"
pixels = "0.13.0"
clap = "4.5.22"

[dependencies.winit]
features = ["rwh_05"]
version = "0.29.15"